unpackaged/main/default/objects/Document_Review__c/Document_Review__c.object-meta.xml
<CustomObject>
    <description>Details of customer document review. Narrative of suspicious activity/altered statements.</description>
    <label>Document Review</label>
    <nameField>
        <displayFormat>DocReview-{0000}</displayFormat>
        <label>Document Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>