unpackaged/main/default/objects/Document_Review__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>The document type that the Document Review record is related to</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
            <value>
                <fullName>Driver’s License</fullName>
            </value>
            <value>
                <fullName>K1</fullName>
            </value>
            <value>
                <fullName>State Issued ID</fullName>
            </value>
            <value>
                <fullName>U.S. Passport</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>