unpackaged/main/default/objects/Document_Review__c/fields/Override_Comments__c.field-meta.xml
<CustomField>
    <fullName>Override_Comments__c</fullName>
    <description>Comments for when the Document Review is overridden.</description>
    <label>Override Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>