unpackaged/main/default/objects/Document_Review__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>Date/Time the statements were reviewed.</description>
    <label>Review Date</label>
    <type>DateTime</type>
</CustomField>