unpackaged/main/default/objects/Document_Review__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who reviewed the statements</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>