unpackaged/main/default/objects/Document_Review__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altered Driver’s License</fullName>
            </value>
            <value>
                <fullName>Altered State Issued ID</fullName>
            </value>
            <value>
                <fullName>Altered Statements</fullName>
            </value>
            <value>
                <fullName>Altered Statements - In Review</fullName>
            </value>
            <value>
                <fullName>Altered U.S. Passport</fullName>
            </value>
            <value>
                <fullName>Overridden; Not Altered</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>