unpackaged/main/default/objects/Document_Review__c/fields/Suspicion_of_Altered_Statements__c.field-meta.xml
<CustomField>
    <fullName>Suspicion_of_Altered_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if user identifies that statements are under review for altered statements.</description>
    <label>Suspicion of Altered Statements</label>
    <type>Checkbox</type>
</CustomField>